fixed navbar alignment

--- a/styles.css
+++ b/styles.css
@@ -31,10 +31,20 @@
 
 #navbar_logo{
     background-color: aquamarine;
-    background-image: linear-gradient(to top, #ff0844 0%, #ff1b9f 100%)
+    background-image: linear-gradient(to top, #ff0844 0%, #62c79b 100%);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 2rem;
 }
 
-.navbar_logo{
+.navbar_menu{
     display: flex;
     align-items: center;
     list-style: none;
@@ -42,4 +52,15 @@
 
 .navbar_item{
     height: 80px;
+}
+
+.navbar_links{
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    height: 100%;
+    width: 125px;
+    transition: all 0.3s ease;
 }
